--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,8 @@
   "id": "973190264627852404",
   "api": "1.0.0",
   "main": "dist/code.js",
-  "ui": "dist/ui.html"
+  "ui": "dist/ui.html",
+  "relaunchButtons": [
+    {"command": "open", "name": "Open Zketch"}
+  ]
 }
