--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "id": "973190264627852404",
   "api": "1.0.0",
   "main": "dist/code.js",
-  "ui": "dist/ui.html",,
+  "ui": "dist/ui.html",
   "editorType": [
     "figma"
   ],
